--- a/explore_score_take8.ipynb
+++ b/explore_score_take8.ipynb
@@ -3391,14 +3391,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "568063fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "fb627647",
    "metadata": {},
    "outputs": [
@@ -3406,32 +3398,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3)\n",
-      "(5, 3)\n",
-      "(1, 3)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Must pass 2-d input. shape=()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 52>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     47\u001b[0m     save_model_to_file(bkp_file, imputer)\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m imputer\n\u001b[0;32m---> 52\u001b[0m \u001b[43mtrain_inputer_for_column\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtarget_column\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDX_num\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36mtrain_inputer_for_column\u001b[0;34m(target_column, n_units_hidden)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m repeat \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m3\u001b[39m):\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m train_input, train_output, train_target_mask \u001b[38;5;129;01min\u001b[39;00m testcases:\n\u001b[0;32m---> 39\u001b[0m         \u001b[43mimputer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     40\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtrain_input\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtrain_output\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtrain_target_mask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtest_in\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtest_output\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtest_target_mask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     47\u001b[0m save_model_to_file(bkp_file, imputer)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m imputer\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pydantic/decorator.py:40\u001b[0m, in \u001b[0;36mpydantic.decorator.validate_arguments.validate.wrapper_function\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pydantic/decorator.py:134\u001b[0m, in \u001b[0;36mpydantic.decorator.ValidatedFunction.call\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pydantic/decorator.py:201\u001b[0m, in \u001b[0;36mpydantic.decorator.ValidatedFunction.execute\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/code/genentech-404-challenge/ts_imputer_v2.py:362\u001b[0m, in \u001b[0;36mTimeSeriesImputerTemporal.fit\u001b[0;34m(self, train_miss_data, train_real_data, train_target_mask, val_miss_data, val_real_data, val_target_mask)\u001b[0m\n\u001b[1;32m    359\u001b[0m gt_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(val_real_data\u001b[38;5;241m.\u001b[39mcolumns)\n\u001b[1;32m    361\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m--> 362\u001b[0m     val_preds \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_miss_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    363\u001b[0m     val_preds \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    364\u001b[0m         val_preds[gt_cols]\n\u001b[1;32m    365\u001b[0m         \u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRID_HASH\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVISCODE\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m    366\u001b[0m         \u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mfloat\u001b[39m)\n\u001b[1;32m    367\u001b[0m     )\n\u001b[1;32m    369\u001b[0m     val_gt \u001b[38;5;241m=\u001b[39m val_real_data\u001b[38;5;241m.\u001b[39mdrop(\n\u001b[1;32m    370\u001b[0m         columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRID_HASH\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVISCODE\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    371\u001b[0m     )\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mfloat\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pydantic/decorator.py:40\u001b[0m, in \u001b[0;36mpydantic.decorator.validate_arguments.validate.wrapper_function\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pydantic/decorator.py:134\u001b[0m, in \u001b[0;36mpydantic.decorator.ValidatedFunction.call\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pydantic/decorator.py:201\u001b[0m, in \u001b[0;36mpydantic.decorator.ValidatedFunction.execute\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/code/genentech-404-challenge/ts_imputer_v2.py:148\u001b[0m, in \u001b[0;36mTimeSeriesImputerTemporal.predict\u001b[0;34m(self, miss_data)\u001b[0m\n\u001b[1;32m    145\u001b[0m     \u001b[38;5;28mprint\u001b[39m(temporal_preds\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m    146\u001b[0m     temporal_preds \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(temporal_preds, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39msqueeze()\n\u001b[0;32m--> 148\u001b[0m temporal_preds \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemporal_preds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moutput_cols\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    149\u001b[0m temporal_preds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVISCODE\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m viscode\u001b[38;5;241m.\u001b[39msqueeze()\n\u001b[1;32m    150\u001b[0m temporal_preds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRID_HASH\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m rid\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pandas/core/frame.py:694\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    684\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m dict_to_mgr(\n\u001b[1;32m    685\u001b[0m             \u001b[38;5;66;03m# error: Item \"ndarray\" of \"Union[ndarray, Series, Index]\" has no\u001b[39;00m\n\u001b[1;32m    686\u001b[0m             \u001b[38;5;66;03m# attribute \"name\"\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    691\u001b[0m             typ\u001b[38;5;241m=\u001b[39mmanager,\n\u001b[1;32m    692\u001b[0m         )\n\u001b[1;32m    693\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 694\u001b[0m         mgr \u001b[38;5;241m=\u001b[39m \u001b[43mndarray_to_mgr\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    695\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    696\u001b[0m \u001b[43m            \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    697\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    698\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    699\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    700\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    701\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    703\u001b[0m \u001b[38;5;66;03m# For data is list-like, or Iterable (will consume into list)\u001b[39;00m\n\u001b[1;32m    704\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like(data):\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pandas/core/internals/construction.py:331\u001b[0m, in \u001b[0;36mndarray_to_mgr\u001b[0;34m(values, index, columns, dtype, copy, typ)\u001b[0m\n\u001b[1;32m    326\u001b[0m         values \u001b[38;5;241m=\u001b[39m values\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    328\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    329\u001b[0m     \u001b[38;5;66;03m# by definition an array here\u001b[39;00m\n\u001b[1;32m    330\u001b[0m     \u001b[38;5;66;03m# the dtypes will be coerced to a single dtype\u001b[39;00m\n\u001b[0;32m--> 331\u001b[0m     values \u001b[38;5;241m=\u001b[39m \u001b[43m_prep_ndarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy_on_sanitize\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    333\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_dtype_equal(values\u001b[38;5;241m.\u001b[39mdtype, dtype):\n\u001b[1;32m    334\u001b[0m     shape \u001b[38;5;241m=\u001b[39m values\u001b[38;5;241m.\u001b[39mshape\n",
-      "File \u001b[0;32m~/miniconda/envs/py38/lib/python3.8/site-packages/pandas/core/internals/construction.py:591\u001b[0m, in \u001b[0;36m_prep_ndarray\u001b[0;34m(values, copy)\u001b[0m\n\u001b[1;32m    589\u001b[0m     values \u001b[38;5;241m=\u001b[39m values\u001b[38;5;241m.\u001b[39mreshape((values\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m    590\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m values\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m--> 591\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMust pass 2-d input. shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalues\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    593\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m values\n",
-      "\u001b[0;31mValueError\u001b[0m: Must pass 2-d input. shape=()"
+      "Training imputer for workspace/dedicated_imputer_col_AGE_150.bkp\n",
+      "   >>> Epoch 99 train loss  = 0.31008122639226104 val loss 0.42521642233646734\n",
+      "   >>> Epoch 199 train loss  = 0.22757615878557166 val loss 0.41981815843610626\n",
+      "   >>> Epoch 299 train loss  = 0.14488891574243704 val loss 0.3962608958846715\n",
+      "   >>> Epoch 399 train loss  = 0.11936264174679916 val loss 0.39616788511637274\n",
+      "   >>> Epoch 499 train loss  = 0.15471014079715437 val loss 0.4131661773086399\n",
+      "   >>> Epoch 599 train loss  = 0.09216465075345089 val loss 0.46781581298521707\n",
+      "   >>> Epoch 699 train loss  = 0.0979943454634243 val loss 0.40021212303330234\n",
+      "   >>> Epoch 799 train loss  = 0.11325509126860804 val loss 0.36771297421774934\n",
+      "   >>> Epoch 899 train loss  = 0.1142052881186828 val loss 0.40147016456013507\n",
+      "   >>> Epoch 999 train loss  = 0.08598399034235626 val loss 0.4140964564174326\n",
+      "   >>> Epoch 1099 train loss  = 0.08091516084580992 val loss 0.41623896270492255\n",
+      "   >>> Epoch 1199 train loss  = 0.10231056341338747 val loss 0.4252978818914704\n",
+      "   >>> Epoch 1299 train loss  = 0.08590052358340472 val loss 0.36742984977631316\n",
+      "   >>> Epoch 1399 train loss  = 0.06670446262190428 val loss 0.3396599543438417\n",
+      "   >>> Epoch 1499 train loss  = 0.055919449271944664 val loss 0.3563693058376468\n",
+      "   >>> Epoch 1599 train loss  = 0.05274080862485183 val loss 0.3898310448800908\n",
+      "   >>> Epoch 1699 train loss  = 0.050907067459775135 val loss 0.3515493020725386\n",
+      "   >>> Epoch 1799 train loss  = 0.06356122317568709 val loss 0.3972261630397774\n",
+      "   >>> Epoch 1899 train loss  = 0.07268063625087962 val loss 0.3653366676468713\n",
+      "   >>> Epoch 99 train loss  = 0.14301164917803058 val loss 0.4046136866752498\n",
+      "   >>> Epoch 199 train loss  = 0.11720135206511866 val loss 0.3953276497804366\n",
+      "   >>> Epoch 299 train loss  = 0.08036419820564333 val loss 0.4001399401054208\n",
+      "   >>> Epoch 399 train loss  = 0.11070265671393524 val loss 0.42263283456509343\n",
+      "   >>> Epoch 499 train loss  = 0.17401834895038823 val loss 0.3294221945548391\n",
+      "   >>> Epoch 599 train loss  = 0.0931219336828993 val loss 0.36052531425907286\n",
+      "   >>> Epoch 699 train loss  = 0.06942322964217358 val loss 0.39352387440105396\n",
+      "   >>> Epoch 799 train loss  = 0.05452506270376034 val loss 0.3533006090885315\n",
+      "   >>> Epoch 899 train loss  = 0.14122154344416535 val loss 0.3921485382998761\n",
+      "   >>> Epoch 999 train loss  = 0.07352637813892215 val loss 0.34641736002240986\n",
+      "   >>> Epoch 99 train loss  = 0.10240792771219276 val loss 0.36007705076658036\n",
+      "   >>> Epoch 199 train loss  = 0.10365556163014844 val loss 0.3552632835953945\n",
+      "   >>> Epoch 299 train loss  = 0.09528485181120534 val loss 0.4256288768793365\n",
+      "   >>> Epoch 399 train loss  = 0.06968267027211066 val loss 0.3502337736352847\n",
+      "   >>> Epoch 499 train loss  = 0.07260733730314921 val loss 0.38336929570835016\n",
+      "   >>> Epoch 599 train loss  = 0.06046281176774452 val loss 0.37349249117694294\n",
+      "   >>> Epoch 699 train loss  = 0.06238546073048686 val loss 0.3556925533611657\n",
+      "   >>> Epoch 799 train loss  = 0.06684168300125748 val loss 0.35005929635103744\n",
+      "   >>> Epoch 899 train loss  = 0.057404494805571936 val loss 0.3655640908596724\n",
+      "   >>> Epoch 999 train loss  = 0.06633930225507356 val loss 0.36824872291602806\n",
+      "   >>> Epoch 1099 train loss  = 0.06069532948701332 val loss 0.3513244856499589\n",
+      "   >>> Epoch 1199 train loss  = 0.042987415964792795 val loss 0.33198489489178545\n"
      ]
     }
    ],
@@ -3443,8 +3451,9 @@
     "def train_inputer_for_column(target_column: str, n_units_hidden: int = 150):\n",
     "    bkp_file = workspace / f\"dedicated_imputer_col_{target_column}_{n_units_hidden}.bkp\"\n",
     "\n",
-    "    # if bkp_file.exists():\n",
-    "    #    return load_model_from_file(bkp_file)\n",
+    "    print(\"Training imputer for\", bkp_file)\n",
+    "    if bkp_file.exists():\n",
+    "        return load_model_from_file(bkp_file)\n",
     "\n",
     "    cat_thresh = 30\n",
     "    testcases = prepare_dataset(target_column=target_column, cat_thresh=cat_thresh)\n",
@@ -3486,19 +3495,24 @@
     "\n",
     "    return imputer\n",
     "\n",
-    "\n",
-    "train_inputer_for_column(target_column = \"DX_num\")\n",
-    "#train_inputer_for_column(target_column=\"DX_num\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1fa61e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imputer.predict(train_input)"
+    "for target_column in [\n",
+    "     'AGE',\n",
+    "     #'PTGENDER_num',\n",
+    "     #'PTEDUCAT',\n",
+    "     #'DX_num',\n",
+    "     #'APOE4',\n",
+    "     #'CDRSB',\n",
+    "     #'MMSE',\n",
+    "     'ADAS13',\n",
+    "     'Ventricles',\n",
+    "     'Hippocampus',\n",
+    "     'WholeBrain',\n",
+    "     'Entorhinal',\n",
+    "     'Fusiform',\n",
+    "     'MidTemp'\n",
+    "]:\n",
+    "    train_inputer_for_column(target_column = target_column)\n",
+    "    "
    ]
   },
   {
